[gd_scene load_steps=106 format=3 uid="uid://bhbaif6uihe54"]

[ext_resource type="Texture2D" uid="uid://cu8rsjm3e1aje" path="res://TheBossFight/assets/spritesheets/Idle-ezgif.com-gif-to-sprite-converter.png" id="1_p0vlq"]
[ext_resource type="Script" uid="uid://lsn8teag5jv0" path="res://TheBossFight/scripts/player.gd" id="1_v6fml"]
[ext_resource type="Texture2D" uid="uid://cmevjgilhgrks" path="res://TheBossFight/assets/spritesheets/Double_Jump-ezgif.com-gif-to-sprite-converter.png" id="2_6eyey"]
[ext_resource type="Texture2D" uid="uid://c5emaverm1od5" path="res://TheBossFight/assets/spritesheets/PlayerDeathSpriteSheet.png" id="3_bruh7"]
[ext_resource type="Texture2D" uid="uid://bwhunmo6uqdkr" path="res://TheBossFight/assets/spritesheets/Walk-ezgif.com-effects.png" id="3_mdl7e"]
[ext_resource type="Texture2D" uid="uid://bo0po5x14h3lv" path="res://TheBossFight/assets/spritesheets/PlayerHitSpriteSheet.png" id="4_6eyey"]
[ext_resource type="Texture2D" uid="uid://bjfoy5vkq26q1" path="res://TheBossFight/assets/spritesheets/Jump-ezgif.com-gif-to-sprite-converter.png" id="4_qu4a1"]
[ext_resource type="Texture2D" uid="uid://lxkr7ullf6ov" path="res://TheBossFight/assets/spritesheets/IdleGunSpriteSheet.png" id="5_d3wef"]
[ext_resource type="PackedScene" uid="uid://tbxhtk3of1q1" path="res://TheBossFight/scenes/gun.tscn" id="5_qu4a1"]
[ext_resource type="Texture2D" uid="uid://c2xjjhm0pgx8" path="res://TheBossFight/assets/spritesheets/RunGunSpriteSheet.png" id="6_o4126"]
[ext_resource type="PackedScene" uid="uid://yymqxp3eyg7s" path="res://TheBossFight/scenes/health_bar.tscn" id="11_d3wef"]

[sub_resource type="AtlasTexture" id="AtlasTexture_27epi"]
atlas = ExtResource("2_6eyey")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_84ti5"]
atlas = ExtResource("2_6eyey")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_afj6a"]
atlas = ExtResource("2_6eyey")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cji5y"]
atlas = ExtResource("2_6eyey")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_blnfk"]
atlas = ExtResource("2_6eyey")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qabq5"]
atlas = ExtResource("2_6eyey")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqny8"]
atlas = ExtResource("2_6eyey")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6fml"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3li8b"]
atlas = ExtResource("1_p0vlq")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdl7e"]
atlas = ExtResource("1_p0vlq")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu4a1"]
atlas = ExtResource("1_p0vlq")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_70d11"]
atlas = ExtResource("1_p0vlq")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw2d6"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_khinc"]
atlas = ExtResource("1_p0vlq")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bruh7"]
atlas = ExtResource("1_p0vlq")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eyey"]
atlas = ExtResource("1_p0vlq")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3wef"]
atlas = ExtResource("1_p0vlq")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4126"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkdrv"]
atlas = ExtResource("1_p0vlq")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7iby"]
atlas = ExtResource("1_p0vlq")
region = Rect2(200, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rnld"]
atlas = ExtResource("1_p0vlq")
region = Rect2(300, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_srp4u"]
atlas = ExtResource("1_p0vlq")
region = Rect2(400, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfpux"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_61ith"]
atlas = ExtResource("1_p0vlq")
region = Rect2(100, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebwui"]
atlas = ExtResource("1_p0vlq")
region = Rect2(200, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfy4j"]
atlas = ExtResource("1_p0vlq")
region = Rect2(300, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv3ic"]
atlas = ExtResource("1_p0vlq")
region = Rect2(400, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8lor"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e537"]
atlas = ExtResource("1_p0vlq")
region = Rect2(100, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p07f3"]
atlas = ExtResource("1_p0vlq")
region = Rect2(200, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_viqgg"]
atlas = ExtResource("1_p0vlq")
region = Rect2(300, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgkxt"]
atlas = ExtResource("1_p0vlq")
region = Rect2(400, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsi7p"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jpwa"]
atlas = ExtResource("1_p0vlq")
region = Rect2(100, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfeki"]
atlas = ExtResource("1_p0vlq")
region = Rect2(200, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_axnmu"]
atlas = ExtResource("1_p0vlq")
region = Rect2(300, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvsjc"]
atlas = ExtResource("1_p0vlq")
region = Rect2(400, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxdpb"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_agngo"]
atlas = ExtResource("1_p0vlq")
region = Rect2(100, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrixf"]
atlas = ExtResource("1_p0vlq")
region = Rect2(200, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmt83"]
atlas = ExtResource("1_p0vlq")
region = Rect2(300, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4as6"]
atlas = ExtResource("1_p0vlq")
region = Rect2(400, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1r6t"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 700, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lt3gi"]
atlas = ExtResource("3_bruh7")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_akpgi"]
atlas = ExtResource("3_bruh7")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kumhx"]
atlas = ExtResource("3_bruh7")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_100hb"]
atlas = ExtResource("3_bruh7")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml80s"]
atlas = ExtResource("3_bruh7")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdgyb"]
atlas = ExtResource("3_bruh7")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvyme"]
atlas = ExtResource("3_bruh7")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_swrsk"]
atlas = ExtResource("4_6eyey")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkfac"]
atlas = ExtResource("4_6eyey")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_unhkg"]
atlas = ExtResource("4_6eyey")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kajp"]
atlas = ExtResource("4_6eyey")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku51j"]
atlas = ExtResource("5_d3wef")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_la8f2"]
atlas = ExtResource("5_d3wef")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oanc2"]
atlas = ExtResource("5_d3wef")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_41lfj"]
atlas = ExtResource("5_d3wef")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nh4m"]
atlas = ExtResource("5_d3wef")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hk6f"]
atlas = ExtResource("5_d3wef")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmxrx"]
atlas = ExtResource("6_o4126")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvw7q"]
atlas = ExtResource("6_o4126")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0eor"]
atlas = ExtResource("6_o4126")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrwhh"]
atlas = ExtResource("6_o4126")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7djh"]
atlas = ExtResource("6_o4126")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wx1s8"]
atlas = ExtResource("6_o4126")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_im07a"]
atlas = ExtResource("6_o4126")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsbg5"]
atlas = ExtResource("6_o4126")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uobdy"]
atlas = ExtResource("6_o4126")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_iv1vf"]
atlas = ExtResource("6_o4126")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2viqe"]
atlas = ExtResource("6_o4126")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjt17"]
atlas = ExtResource("6_o4126")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0asu"]
atlas = ExtResource("3_mdl7e")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq1a3"]
atlas = ExtResource("3_mdl7e")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu4mg"]
atlas = ExtResource("3_mdl7e")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk6la"]
atlas = ExtResource("3_mdl7e")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrxk4"]
atlas = ExtResource("3_mdl7e")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg1p0"]
atlas = ExtResource("3_mdl7e")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2u8p"]
atlas = ExtResource("3_mdl7e")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv10x"]
atlas = ExtResource("3_mdl7e")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdxpi"]
atlas = ExtResource("3_mdl7e")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b437"]
atlas = ExtResource("3_mdl7e")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nyu3"]
atlas = ExtResource("3_mdl7e")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_priom"]
atlas = ExtResource("3_mdl7e")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7odld"]
atlas = ExtResource("4_qu4a1")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_axtmv"]
atlas = ExtResource("4_qu4a1")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6x32p"]
atlas = ExtResource("4_qu4a1")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pusvq"]
atlas = ExtResource("4_qu4a1")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qduiv"]
atlas = ExtResource("4_qu4a1")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yj0e"]
atlas = ExtResource("4_qu4a1")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0jld"]
atlas = ExtResource("4_qu4a1")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdclj"]
atlas = ExtResource("4_qu4a1")
region = Rect2(100, 200, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_c0asu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_27epi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84ti5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afj6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cji5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blnfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qabq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqny8")
}],
"loop": false,
"name": &"DoubleJump",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6fml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3li8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdl7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu4a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70d11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw2d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khinc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bruh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eyey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3wef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4126")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkdrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7iby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rnld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srp4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfpux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61ith")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebwui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfy4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv3ic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8lor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e537")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p07f3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_viqgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgkxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsi7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jpwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfeki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axnmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvsjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxdpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agngo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrixf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmt83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4as6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1r6t")
}],
"loop": true,
"name": &"Idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt3gi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akpgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kumhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_100hb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml80s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdgyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvyme")
}],
"loop": false,
"name": &"PlayerDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_swrsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkfac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unhkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kajp")
}],
"loop": false,
"name": &"PlayerHit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku51j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_la8f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oanc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41lfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nh4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hk6f")
}],
"loop": true,
"name": &"PlayerIdleGun",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmxrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvw7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0eor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrwhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7djh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wx1s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im07a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsbg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uobdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iv1vf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2viqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjt17")
}],
"loop": true,
"name": &"PlayerRunGun",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0asu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq1a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu4mg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk6la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrxk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg1p0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2u8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv10x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdxpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b437")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nyu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_priom")
}],
"loop": true,
"name": &"Run",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7odld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axtmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x32p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pusvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qduiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yj0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0jld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}],
"loop": true,
"name": &"jump",
"speed": 16.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v6fml"]
radius = 11.0
height = 48.0

[node name="Player" type="CharacterBody2D" groups=["Players"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_v6fml")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["Players"]]
z_index = 1
sprite_frames = SubResource("SpriteFrames_c0asu")
animation = &"PlayerDeath"
frame = 6
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_v6fml")

[node name="Node2D" parent="." instance=ExtResource("5_qu4a1")]
z_index = 2
position = Vector2(-8, 11)

[node name="dash_timer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" parent="CanvasLayer" instance=ExtResource("11_d3wef")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -230.0
offset_top = 50.0
offset_right = -30.0
offset_bottom = 55.0
grow_horizontal = 0

[node name="Label" type="Label" parent="CanvasLayer" groups=["Players"]]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 20.0
offset_right = -87.0
offset_bottom = 43.0
grow_horizontal = 0
text = "PLAYER LIFE"

[node name="dash_cooldown_timer" type="Timer" parent="."]
wait_time = 1.3
one_shot = true
